<resources>
    <string name="app_name">AgroTention App</string>

    <string name="title_slide_1">One click for every solution</string>
    <string name="title_slide_2">smart detection for modern farmers</string>
    <string name="title_slide_3">Recognize Diseases, Save Plants with One Scan</string>
    <string name="get_started">Get Started</string>
    <string name="img_desc">Image Logo</string>
    <string name="email">Email Address :</string>
    <string name="password">Password</string>
    <string name="error_empty_email">Empty Email</string>
    <string name="error_empty_password">Empty Password</string>
    <string name="validationEmail">Invalid email format</string>
    <string name="back_button">Back Button</string>
    <string name="app_logo">App Logo</string>
    <string name="agrotention">AgroTention</string>
    <string name="email_address">Email Address</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account?</string>
    <string name="home">Home</string>
    <string name="scan">Scan\n</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="info">💡 To use the scan feature, please select the type of plant you want to analyze.</string>
    <string name="rice">Rice</string>
    <string name="tomato">Tomato</string>
    <string name="potato">Potato</string>
    <string name="register">Register</string>
    <string name="image">image</string>
    <string name="title">title</string>
    <string name="author">Author</string>
    <string name="description">Description</string>
    <string name="name_plant">plant name</string>
    <string name="name_disease">disease name</string>
    <string name="sign_in">sign in</string>
    <string name="name">name :</string>
    <string name="company">company (opsional)</string>
    <string name="role">role (opsional)</string>
    <string name="or">OR</string>
    <string name="sign_up">SIGN-UP</string>
    <string name="default_web_client_id">555046474426-k5ivi157675f7msoc41shm4rd5sas8ae.apps.googleusercontent.com</string>
    <string name="publisher">publisher</string>
    <string name="time">time</string>
    <string name="agrotention_news">AGROTENTION NEWS</string>
    <string name="continue_with_instagram">continue with instagram</string>
    <string name="continue_with_facebook">continue with facebook</string>
    <string name="from">from</string>
    <string name="email_agrotention">agrotention@gmail.com</string>
    <string name="no_tlp">083876567456</string>
    <string name="logout">Logout</string>
    <string name="tlp_number">phone number :</string>
    <string name="Solanum_lycopersicum">(Solanum lycopersicum)</string>
    <string name="dieases_name">disease name :</string>
    <string name="sample_virus">Tomato Mosaic Virus</string>
    <string name="disease_management">disease management methods :</string>
    <string name="sample_method">Tomato Mosaic Virus (ToMV) is a viral disease that affects tomatoes and other solanaceous plants. Here are some steps to handle and manage the disease:\nIdentify Infected Plants: Early signs of ToMV include mottling (mosaic pattern) on the leaves, stunted growth, yellowing, and deformed fruit. If you notice these symptoms, it\'s important to act quickly.</string>
    <string name="tflitevision_is_not_initialized_yet">tflitevision is not initialized yet</string>
    <string name="image_classifier_failed">image classifier failed</string>
    <string name="result">Hasil Analisis</string>

</resources>