<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.signup.SignupActivity">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="12dp"
        android:src="@drawable/arrow_circle_left_24px"
        android:contentDescription="@string/back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_logo"
        app:layout_constraintTop_toBottomOf="@id/iv_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/agrotention"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_name_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/name"
        android:backgroundTint="@color/colorPrimary"
        android:textColorHint="@color/grey"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/et_email_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:hint="@string/email_address"
        android:backgroundTint="@color/colorPrimary"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/et_name_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/et_company"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:hint="@string/company"
        android:backgroundTint="@color/colorPrimary"
        android:textColorHint="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/et_email_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/et_role"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:hint="@string/role"
        android:backgroundTint="@color/colorPrimary"
        android:textColorHint="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/et_company"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/et_password_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:hint="@string/password"
        android:backgroundTint="@color/colorPrimary"
        android:inputType="textPassword"
        android:textColorHint="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/et_role"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#2F5D2F"
        android:text="@string/sign_in"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/et_password_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>