<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="2dp"
    android:layout_marginTop="4dp"
    android:padding="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="0dp" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_news"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/title_news"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_news"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/title"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/publisher_news"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_news"
            app:layout_constraintTop_toBottomOf="@+id/title_news"
            tools:text="@string/publisher" />

        <TextView
            android:id="@+id/time_news"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_news"
            app:layout_constraintTop_toBottomOf="@+id/publisher_news"
            tools:text="@string/time"
            android:textSize="10sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>