<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:layout_marginTop="8dp"
    android:padding="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_plant"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/name_plant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_plant"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/name_plant" />

        <TextView
            android:id="@+id/name_disease"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/img_plant"
            app:layout_constraintTop_toBottomOf="@+id/name_plant"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/name_disease" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</com.google.android.material.card.MaterialCardView>