<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.main.fragment.ScanFragment">

    <!-- Info Message -->
    <TextView
        android:id="@+id/tv_info_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_text"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:padding="12dp"
        android:text="@string/info"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:cornerRadius="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_info_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Rice Button -->
        <LinearLayout
            android:id="@+id/btn_rice"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginEnd="8dp"
            android:background="@drawable/background_button"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_rice"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:src="@drawable/button_rice"
                android:contentDescription="@string/rice" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rice"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <!-- Tomato Button -->
        <LinearLayout
            android:id="@+id/btn_tomato"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginEnd="8dp"
            android:background="@drawable/background_button"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_tomato"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:src="@drawable/button_tomato"
                android:contentDescription="@string/tomato" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tomato"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <!-- Potato Button -->
        <LinearLayout
            android:id="@+id/btn_potato"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/background_button"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_potato"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:src="@drawable/button_potato"
                android:contentDescription="@string/potato" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/potato"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="8dp" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>